# simdPricer

./: .gitignore  CMakeLists.txt  README.md  results.txt
src/: IPricer.h  VectorPricer.cpp  VectorPricer.h  dataManager.h  erfc.cpp  log.cpp  main.cpp  pricer.cpp  pricer.h  pricer_test.cpp  scalarPricer.cpp  test.cpp  utils.cpp  utils.h  vectorPricer.cpp
src/include/: IPricer.h  VectorPricer.h  benchmark.h  scalarPricer.h  utils.h  vectorPricer.h
src/rezem/: checkRemze.py  rezem.py
